Add buttons and div

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>rock paper scissors</title>
     </head>
     <body>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+        <div></div>
         <script src="javascript.js"></script>
     </body>
 </html>
