--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
-        <div></div>
+        <div class="result"></div>
+        <div class="score"></div>
+        <div class="winner"></div>
         <script src="javascript.js"></script>
     </body>
 </html>
