--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
+        <div>Choose any of the options to play!</div>
         <div class="result"></div>
         <div class="score"></div>
         <div class="winner"></div>
